Sat Dec 30 13:48:54 GMT 2006  Richard Boulton <richard@lemurconsulting.com>

	* queryparser/queryparser.lemony,include/xapian/queryparser.h:
	  Add support for partially entered queries, to better support
	  incremental searching.  Also fix a typo in a comment.
	* docs/queryparser.html: Document the new partial query option, and
	  what it's useful for.
	* tests/queryparsertest.cc: Test partial queries.

Wed Dec 20 16:42:24 GMT 2006  Olly Betts <olly@survex.com>

	* PLATFORMS: Updated with success reports from debian buildds.

Wed Dec 20 00:53:19 GMT 2006  Olly Betts <olly@survex.com>

	* api/omqueryinternal.cc: Fix "unused parameter" warning when building
	  with the remote backend disabled.  Also update a comment - the query
	  serialisation isn't really one line of text since we now store term
	  names with the length prefixed, and they can contain arbitrary
	  characters including linefeeds.

Tue Dec 19 20:40:27 GMT 2006  Olly Betts <olly@survex.com>

	* tests/Makefile.am: Need libgetopt.la for test programs which
	  use the test harness for platforms where GNU getopt isn't in
	  the standard C library.

Tue Dec 19 20:34:16 GMT 2006  Olly Betts <olly@survex.com>

	* queryparser/utf8itor.h: Need <string.h> for strlen.

Tue Dec 19 16:35:58 GMT 2006  Olly Betts <olly@survex.com>

	* common/omstringstream.h: Fix "warning: comparison between signed and
	  unsigned".

Tue Dec 19 15:33:19 GMT 2006  Olly Betts <olly@survex.com>

	* backends/flint/flint_positionlist.cc: Turn the second (and
	  potentially slightly deeper) recursion in encode_interpolative
	  and decode_interpolative into explicit iteration in case the
	  compiler fails to optimise the tail recursion.

Mon Dec 18 03:39:41 GMT 2006  Olly Betts <olly@survex.com>

	* matcher/: Add ExactPhrasePostList to handle the common special case
	  where the window size of OP_PHRASE is equal to the number of terms
	  in the phrase.

Mon Dec 18 02:21:32 GMT 2006  Olly Betts <olly@survex.com>
