@@ -1,3 +1,9 @@
+Tue Jan  2 15:49:43 GMT 2007  Richard Boulton <richard@lemurconsulting.com>
+
+	* backends/quartz/btree.cc,backends/flint/flint_io.h: Patches from
+	  Charlie Hull to allow 2GB+ index files work when compiled using
+	  Visual C++.
+
 Sat Dec 30 13:48:54 GMT 2006  Richard Boulton <richard@lemurconsulting.com>
 
 	* queryparser/queryparser.lemony,include/xapian/queryparser.h:
